--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
   },
   "homepage": "https://github.com/ermenauta/eco-bot#readme",
   "dependencies": {
-    "node-telegram-bot-api": "^0.30.0"
-  },
-  "devDependencies": {
+    "node-telegram-bot-api": "^0.30.0",
     "dotenv": "^8.0.0"
   },
+  "devDependencies": {},
   "engines": {
     "node": "10.16.0",
     "npm": "6.9.0"
