--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/ermenauta/eco-bot#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
+    "memjs": "^1.2.2",
+    "moment": "^2.24.0",
     "node-telegram-bot-api": "^0.30.0",
-    "dotenv": "^8.0.0"
+    "redis": "^2.8.0"
   },
   "devDependencies": {},
   "engines": {
