Add testing framework

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Un bot telegram per la comunicazione della raccolta differenziata nei piccoli comuni",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jasmine",
     "start": "node index.js"
   },
   "repository": {
@@ -25,7 +25,9 @@
     "node-telegram-bot-api": "^0.30.0",
     "redis": "^2.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jasmine": "^3.5.0"
+  },
   "engines": {
     "node": "10.16.0",
     "npm": "6.9.0"
