--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Un bot telegram per la comunicazione della raccolta differenziata nei piccoli comuni",
   "main": "index.js",
   "scripts": {
-    "test": "istanbul cover -x **/*[sS]pec.js --include-all-sources jasmine",
+    "test": "istanbul cover -x '**/*[sS]pec.js' --include-all-sources jasmine",
     "start": "node index.js"
   },
   "repository": {
