--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "istanbul": "^0.4.5",
-    "jasmine": "^3.5.0"
+    "jasmine": "^3.5.0",
+    "nock": "^12.0.2",
+    "rewiremock": "^3.13.9"
   },
   "engines": {
     "node": "10.16.0",
