--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "memjs": "^1.2.2",
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
-    "node-telegram-bot-api": "^0.50.0"
+    "node-telegram-bot-api": "^0.50.0",
+    "pino": "^6.4.1"
   },
   "devDependencies": {
     "jasmine": "^3.5.0",
